fix(css): center aligns images

--- a/assets/css/default.sass
+++ b/assets/css/default.sass
@@ -25,6 +25,12 @@ p:has(mjx-container[display="true"])
 	margin-left: 0
 	margin-right: 0
 
+// center align images
+img
+	display: block
+	margin-left: auto
+	margin-right: auto
+
 // main heading
 h1
 	text-align: center
